--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full">
   <head>
     <title>ParallelCorpus</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
+  <body class="h-full bg-stone-50">
+    <!-- <main class="container mx-auto px-5"> -->
+      <div class="min-h-full">
+        <%= render "shared/header" %>
+        <div class="py-10">
+          <%= yield %>
+        </div>
+      </div>
+    <!-- </main> -->
   </body>
 </html>
