Add downloads on the collections page

--- a/app/views/admin/text_blocks/index.html.erb
+++ b/app/views/admin/text_blocks/index.html.erb
@@ -17,6 +17,30 @@
       <% else %>
         <%= render 'admin/shared/new_button', name: 'ტექსტური წყვილების რედაქტირება', url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>
       <% end %>
+
+      <div class="mt-4 flex grid grid-flow-col space-x-4 max-w-40">
+        <%= link_to export_admin_text_blocks_path(collection_id: @collection.id, format: :xlsx), class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+          </svg>
+          .xlsx
+        <% end %>
+
+        <%= link_to export_admin_text_blocks_path(collection_id: @collection.id, language: :ka, format: :docx), class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+          </svg>
+          ka.docx
+        <% end %>
+
+        <%= link_to export_admin_text_blocks_path(collection_id: @collection.id, language: :en, format: :docx), class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+          </svg>
+          en.docx
+        <% end %>
+      </div>
+
     <% end %>
 
     <%= render 'admin/shared/paging', records: @text_blocks, url_method: -> (**params){ admin_text_blocks_path(**params) }, paging_params: { collection_id: @collection&.id } %>
