--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -108,7 +108,7 @@
                       class="grid grid-flow-col space-x-2 items-end">
                       <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M 6 7 l 0 -2 m 0 0 l 12 0 m 0 0 l 0 2 M 12 5 l 0 14 m -2 0 l 4 0" />
                         </svg>
                       </div>
                       <div
@@ -156,7 +156,7 @@
                         data-action="click->merge-blocks#submit"
                         class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M 17.25 8.25 L 21 12 m 0 0 l -3.75 3.75 M 17 12 C 9 12 15 6 7 6 M 17 12 C 9 12 15 18 7 18 M 21 12 L 17 12 M 7 6 L 3 6 M 7 18 L 3 18" />
                   </svg>
                 </button>
                 <button type="button"
@@ -210,7 +210,7 @@
                       class="grid grid-flow-col space-x-2 items-end">
                       <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M 6 7 l 0 -2 m 0 0 l 12 0 m 0 0 l 0 2 M 12 5 l 0 14 m -2 0 l 4 0" />
                         </svg>
                       </div>
                       <div
@@ -257,7 +257,7 @@
                         data-action="click->merge-blocks#submit"
                         class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M 17.25 8.25 L 21 12 m 0 0 l -3.75 3.75 M 17 12 C 9 12 15 6 7 6 M 17 12 C 9 12 15 18 7 18 M 21 12 L 17 12 M 7 6 L 3 6 M 7 18 L 3 18" />
                   </svg>
                 </button>
                 <button type="button"
