Add delete all text blocks

--- a/app/views/admin/shared/table/_filter.html.erb
+++ b/app/views/admin/shared/table/_filter.html.erb
@@ -5,11 +5,15 @@
     <% else %>
       <th scope="col" class="<%= table_filter_cell_classes(column, index, columns.size) %>">
         <% if column[:input_type] == :submit %>
-          <button type="submit" class="w-full inline-flex block rounded-md bg-mountbatten-500 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">
-            <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-            </svg>
-            ძიება
+          <button type="submit" class="w-full inline-flex block rounded-md bg-mountbatten-500 px-3 py-2 grid grid-flow-col items-center justify-center space-x-1 text-center text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">
+            <div class="inline-flex">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+              </svg>
+            </div>
+            <div class="inline-flex">
+              ძიება
+            </div>
           </button>
         <% else %>
           <%= table_filter_input(form, column) %>
