Implement simple search

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="border-b border-gray-200 bg-white">
-  <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
+  <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-0">
     <div class="flex h-24 grid grid-flow-col items-center justify-between">
       <div class="flex">
         <div class="grid grid-flow-col grid-cols-4">
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="w-full bg-stone-200">
-    <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
+    <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-0">
       <div class="flex grid grid-flow-col h-16 justify-items-end">
         <div class="flex my-2">
           <div class="flex space-x-0.5 grid grid-flow-col justify-items-center">
