--- a/app/views/text_blocks/index.html.erb
+++ b/app/views/text_blocks/index.html.erb
@@ -3,11 +3,6 @@
     <%= render 'shared/logo_lg' %>
   </div>
   <div class="flex justify-center">
-    <%= form_for @search, url: search_text_blocks_path, method: :get do |form| %>
-      <%= form.text_field :original_contents, class: "w-[640px] border-stone-400 focus:ring-oceanside-500 focus:border-oceanside-500" %>
-      <button type=submit class="bg-mountbatten-500 py-2 px-8 text-white border border-mountbatten-600 hover:bg-mountbatten-400">
-        ძიება
-      </button>
-    <% end %>
+    <%= render 'shared/search_bar' %>
   </div>
 </div>
