--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="h-full bg-stone-50">
+  <body class="h-full bg-stone-100">
     <!-- <main class="container mx-auto px-5"> -->
       <div class="min-h-full">
         <%= render "shared/header" %>
-        <div class="py-10">
+        <div>
           <%= yield %>
         </div>
       </div>
