--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -52,15 +52,19 @@
                     <%= render 'admin/shared/table/row',
                                record: group,
                                index: index,
-                               columns: [{ type: :text, name: :id, classes: 'font-medium text-gray-900 py-4 px-3' },
-                                         { type: :link, name: :supergroup_name_ka, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: group.supergroup_id }, classes: "max-w-[240px] text-gray-500 py-4" },
-                                         { type: :link, name: :name_ka, url_method: -> (**params){ admin_collections_path(**params) }, url_params: { group_id: group.id }, classes: "max-w-[240px] text-gray-500 py-4" },
-                                         { type: :link, name: :name_en, url_method: -> (**params){ admin_collections_path(**params) }, url_params: { group_id: group.id }, classes: "max-w-[240px] text-gray-500 py-4" },
-                                         { type: :text, name: :status, classes: "text-gray-500 py-4 px-3" },
-                                         { type: :text, name: :collections_count, classes: "text-gray-500 py-4 px-3" },
-                                         { type: :text, name: :text_blocks_count, classes: "text-gray-500 py-4 px-3" },
-                                         { type: :links, classes: "font-medium text-gray-500 max-w-[60px]", elements: [{ name: :edit, url_method: -> (**params){ edit_admin_group_path(**params) }, url_params: { id: group.id } },
-                                                                                                                       { name: :enter, url_method: -> (**params){ admin_collections_path(**params) }, url_params: { group_id: group.id } }] }] %>
+                               columns: { uid: true,
+                                          supergroup_name_ka: true,
+                                          enter_url_method: -> (**params){ admin_collections_path(**params) },
+                                          enter_url_params: { group_id: group.id },
+                                          edit_url_method: -> (**params){ edit_admin_group_path(**params) },
+                                          edit_url_params: { id: group.id },
+                                          name_ka: true,
+                                          name_en: true,
+                                          status: true,
+                                          collections_count: true,
+                                          text_blocks_count: true,
+                                          edit: true,
+                                          enter: true } %>
 
 
                   <% end %>
